# Emergence

./: .gitignore  Cargo.toml  Emergence.js  Emergence_bg.wasm  README.md  bacon.toml  index.html  notes.md  rust-toolchain
.github/workflows/: pages.yml  rust.yml
ZettelKasten/: 0ozaolp.md  63g5rzz.md  a6pru5h.md  fkbzy.md  kdj6yav.md  ncjy4.md  nojqg.md  nqd8x.md  r9ld10p.md
ZettelKasten/.emergence/: emergence.sqlite
assets/: sw.js
emergence/: Cargo.toml
emergence/src/: app.rs  lib.rs  main.rs
emergence/test/: -mkPXb5m7U5Rh_QTx0lT3.md  a4mwN6Jg2sXAZDhTXdg5T.md
emergence_cli/: Cargo.toml
emergence_cli/src/: args.rs  main.rs
emergence_cli/test/: 5Xj_zWyIs6JPqmgrKGyRh.md  CRIJhTQ-aM3ynaqXr21L0.md  MD0wfq8fL6LK0qOHq_Sbi.md  PIGsaahGqd5XqMrwsvzLZ.md  PzNj9K5wYjcuxwAIPvhaK.md  VFRUTI3CdP9a-YnDJJ3UL.md  cSRPIvjBQJfv6gjSthYD5.md  duV7QKZ47G42CUx4WfRAy.md  igyvzY8d1uJUFhyAqOBzv.md  jjLcD6OmotMl04zw8DdD9.md  zE2Y6zDW5ebEt03kfVa20.md
emergence_lsp/: Cargo.toml
emergence_zk/: Cargo.toml
emergence_zk/benches/: custom_bench.rs  kasten_bench.rs
emergence_zk/kreator_kyo4w/: 2qtnr.md  6bu07.md  9ootn.md  yrtc3.md
emergence_zk/kreator_kyo4w/.emergence/: emergence.sqlite
emergence_zk/migration/: Cargo.toml
emergence_zk/migration/src/: lib.rs  m20251104_023917_create_tag_table.rs  m20251104_024116_create_zettel_table.rs  m20251104_050736_create_zettel_tag_table.rs
emergence_zk/n6g0n/: 35qvq.md  8xncs.md  hf9ex.md
emergence_zk/n6g0n/.emergence/: emergence.sqlite
emergence_zk/src/: error.rs  frontmatter.rs  id.rs  kasten.rs  lib.rs  link.rs  metadata.rs  tag.rs  workspace.rs  zettel.rs
emergence_zk/src/db/: mod.rs
emergence_zk/src/db/entities/: mod.rs  prelude.rs  tag.rs  zettel.rs  zettel_tag.rs
emergence_zk/src/zettel/: builder.rs  frontmatter.rs  mod.rs
emergence_zk/tests/: parse_test.rs  zkreator.rs
emergence_zk/zkreator_2lyzf/: 00qet.md  01tfh.md  040n2.md  06dh1.md  0793l.md  0ac78.md  0btkj.md  0c4ik.md  0cld2.md  0e3so.md  0ebmd.md  0gmc5.md  0ho1d.md  0izya.md  0kn4m.md  0ks7g.md  0kxmo.md  0kze4.md  0lvpn.md  0nd0o.md  0o8d6.md  0otmq.md  0qhd4.md  0qkba.md  0s7sa.md  0tmpo.md  0vbxw.md  0zgqb.md  14jul.md  14vry.md  15c7z.md  161pt.md  178i9.md  1a5ey.md  1ddjx.md  1f0d0.md  1fpy7.md  1ftts.md  1hwjd.md  1i5hy.md  (+960 more)
emergence_zk/zkreator_2lyzf/.emergence/: emergence.sqlite
emergence_zk/zkreator_hklpj/: 0181c.md  02ip7.md  04dju.md  04f9u.md  052hw.md  06dk4.md  07tnh.md  08oop.md  08pba.md  08t5o.md  0e1p9.md  0fc76.md  0g8jd.md  0ghxw.md  0gqgy.md  0jrm9.md  0k9zt.md  0l16j.md  0mmv9.md  0nb4d.md  0pgju.md  0rbmz.md  0v7cr.md  0vdgw.md  0vpe6.md  0wznr.md  0xdv4.md  0xwpx.md  11rsb.md  12mv7.md  148we.md  14gi4.md  14z70.md  17id5.md  19dvp.md  1b868.md  1crol.md  1ds36.md  1ehnu.md  1gc2d.md  (+960 more)
emergence_zk/zkreator_hklpj/.emergence/: emergence.sqlite
src/: app.rs  main.rs
test_kasten/: 6rsic.md  c1zoq.md  mp4d1.md
