[package]
name = "emergence"
version = "0.1.0"
authors = ["Surendra Jammishetti <suri312006@gmail.com>"]
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", ]

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    # "wayland",       # To support Linux (and CI)
    # "x11",           # To support older Linux distributions (restores one of the default features)
] }

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
egui_graphs = "0.29.0"
petgraph = {version="0.8.2", features=["stable_graph"]}
emergence_zk = {path="../emergence_zk"}
tokio = { version = "1.48.0" }
egui-async = "0.2.3"
reqwest = "0.12.24"
notify = "8.2.0"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
egui-file-dialog = "0.12.0"
console-subscriber = "0.5.0"

egui_commonmark = "0.22"
# Specify what image formats you want to use
image = { version = "0.25", default-features = false, features = ["png"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

