[package]
name = "emergence_zk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version="0.4.41", features=["serde"]}
lazy_static = "1.5.0"
log = "0.4.28"
nanoid = "0.4.0"
petgraph = "0.8.2"
pulldown-cmark = "0.13.0"
# serde = "1.0.227"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
