[package]
name = "emergence_zk"
version = "0.1.0"
edition = "2024"



[dependencies]
chrono = {version="0.4.41", features=["serde"]}
lazy_static = "1.5.0"
log = "0.4.28"
nanoid = "0.4.0"
petgraph = "0.8.2"
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
# serde = "1.0.227"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.8"
tracing = "0.1.41"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" , "schema-sync", "entity-registry", "mock"] }
migration = {path = "./migration"}
notify = "8.2.0"
rand = "0.9.2"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
egui_graphs = "0.29.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kasten_bench"
harness = false
